examples/neg/issue362.effekt
interface Exc { def op(): Unit }
def read {t: Exc}: Unit = t.op()

def foo() {arr: Exc} = box { read {arr} } at {}

def main() = {
  val cap = try {
    foo {arr}
  } with arr: Exc { def op() = resume(println("hey")) }
  cap()
}
